added edit day link in history view, back/forward 1 week buttons